SERVER-16097 invariant(_collection) in DeleteStage::doRestoreState().

A plan stage should only yield if the collection exists.